# exercism

./: .vimrc
cpp/exercism/: CMakeLists.txt
cpp/exercism/hello-world/: CMakeLists.txt  HELP.md  README.md  hello_world_test.cpp
cpp/exercism/hello-world/.exercism/: config.json  metadata.json
cpp/exercism/hello-world/test/: catch.hpp
cpp/interest-is-interesting/: interest_is_interesting.cpp
cpp/lasagna/: lasagna.cpp
cpp/leetcode/: CMakeLists.txt
cpp/leetcode/shortest-path-unweighted/: CMakeLists.txt  main.cpp  solution.cpp  solution.h
leetcode/: elasticity_lesson.py  gaussian_distribution_lesson.py  microeconomics_lesson.py  two_sum.py  two_sum_test.py  utility_theory_lesson.py
leetcode/KL_div/: analysis.md  kl_asymmetry_explanation.py  kl_divergence_asymmetry.py
leetcode/MIT_intro_python/: debug.py  tuple_examples.py  variable_assignments.py
python/black-jack/: black_jack.py
python/card-games/: lists.py
python/cater-waiter/: sets.py
python/chaitanas-colossal-coaster/: list_methods.py
python/collatz-conjecture/: collatz_conjecture.py
python/currency-exchange/: exchange.py
python/darts/: darts.py
python/ghost-gobble-arcade-game/: arcade_game.py
python/grains/: grains.py
python/guidos-gorgeous-lasagna/: lasagna.py
python/hamming/: hamming.py
python/inventory-management/: dicts.py
python/isbn-verifier/: isbn_verifier.py
python/isogram/: isogram.py
python/leap/: leap.py
python/lessons/: explanation.md
python/list-ops/: list_ops.py
python/little-sisters-vocab/: strings.py
python/locomotive-engineer/: locomotive_engineer.py
(+89 files in other folders)
